--- a/web-servers/templates/views/index.hbs
+++ b/web-servers/templates/views/index.hbs
@@ -4,10 +4,13 @@
 
 <head>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
 </head>
 
 <body>
-    <h1>Help</h1>
+    {{>header}}
+    <h1>From a static file</h1>
+    <p>{{name}}</p>
 </body>
 
 </html>
